crates/biome_cli/tests/snapshots/main_commands_check/check_stdin_returns_content_when_not_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --assist-enabled=true --stdin-file-path mock.js
```

# Input messages

```block
let b = 2;
```

# Termination Message

```block
stdin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The contents aren't fixed. Use the `--write` flag to fix them.
  


```

# Emitted Messages

```block
let b = 2;
```

```block
mock.js:1:1 lint/style/useConst  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This let declares a variable that is only assigned once.
  
  > 1 │ let b = 2;
      │ ^^^
  
  i 'b' is never reassigned.
  
  > 1 │ let b = 2;
      │     ^
  
  i Safe fix: Use const instead.
  
  - let·b·=·2;
  + const·b·=·2;
  

```

```block
mock.js:1:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable b is unused.
  
  > 1 │ let b = 2;
      │     ^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend b with an underscore.
  
  - let·b·=·2;
  + let·_b·=·2;
  

```
