crates/biome_cli/tests/snapshots/main_commands_check/check_stdin_returns_text_if_content_is_not_changed.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --assist-enabled=true --write --unsafe --stdin-file-path mock.js
```

# Input messages

```block
console.log("");

```

# Emitted Messages

```block
console.log("");

```
