crates/biome_cli/tests/snapshots/main_commands_check/check_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
import {a as a} from 'mod'; function f() {return{a}} class Foo {}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while applying fixes.
  


```

# Emitted Messages

```block
import { a } from "mod";
function f() {
	return { a };
}
class Foo {}

```

```block
mock.js:2:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This statement must be preceded by a blank line. Add a newline before this statement.
  
    1 │ import { a } from "mod";
  > 2 │ function f() {
      │ ^^^^^^^^^^^^^^
  > 3 │ 	return { a };
  > 4 │ }
      │ ^
    5 │ class Foo {}
    6 │ 
  
  i Safe fix: Organize imports and exports (Biome)
  
    1 1 │   import { a } from "mod";
      2 │ + 
    2 3 │   function f() {
    3 4 │   	return { a };
  

```

```block
mock.js:2:10 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This function f is unused.
  
    1 │ import { a } from "mod";
  > 2 │ function f() {
      │          ^
    3 │ 	return { a };
    4 │ }
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend f with an underscore.
  
    1 1 │   import { a } from "mod";
    2   │ - function·f()·{
      2 │ + function·_f()·{
    3 3 │   	return { a };
    4 4 │   }
  

```

```block
mock.js:5:7 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This class Foo is unused.
  
    3 │ 	return { a };
    4 │ }
  > 5 │ class Foo {}
      │       ^^^
    6 │ 
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```
