crates/biome_cli/tests/snapshots/main_commands_check/check_stdin_write_unsafe_only_organize_imports.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --assist-enabled=true --linter-enabled=false --formatter-enabled=false --write --unsafe --stdin-file-path mock.js
```

# Input messages

```block
import zod from 'zod'; import _ from 'lodash'; function f() {return{}} class Foo {}
```

# Emitted Messages

```block
import _ from 'lodash'; 
import zod from 'zod'; function f() {return{}} class Foo {}
```
