crates/biome_cli/tests/snapshots/main_commands_check/check_write_unsafe_preserves_jsx_attribute_value_shape.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe --only=complexity/noUselessFragments fragment-attribute.tsx
```

## `fragment-attribute.tsx`

```tsx
const cases = (
	<>
		<Component selfClosing={<div />} />
		<Component nested={<span />} />
		<Component expression={value} />
	</>
);

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
