crates/biome_cli/tests/snapshots/main_commands_check/deprecated_suppression_comment.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
// rome-ignore lint(suspicious/noDoubleEquals): test
a == b;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   // rome-ignore lint(suspicious/noDoubleEquals): test
    2   │ - a·==·b;
      2 │ + a·==·b;
      3 │ + 
  

```

```block
file.js organizeImports ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Import statements could be sorted:
  
    1   │ - //·rome-ignore·lint(suspicious/noDoubleEquals):·test
      1 │ + //·biome-ignore·lint(suspicious/noDoubleEquals):·test
    2 2 │   a == b;
  

```

```block
file.js:1:1 suppressions/deprecatedSuppressionComment  FIXABLE   DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━

  i // rome-ignore is deprecated, use // biome-ignore instead
  
  > 1 │ // rome-ignore lint(suspicious/noDoubleEquals): test
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ a == b;
  
  i Unsafe fix: Use // biome-ignore instead
  
    1   │ - //·rome-ignore·lint(suspicious/noDoubleEquals):·test
      1 │ + //·biome-ignore·lint(suspicious/noDoubleEquals):·test
    2 2 │   a == b;
  

```

```block
file.js:1:1 suppressions/deprecatedSuppressionComment  FIXABLE   DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━

  i // rome-ignore is deprecated, use // biome-ignore instead
  
  > 1 │ // rome-ignore lint(suspicious/noDoubleEquals): test
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ a == b;
  
  i Unsafe fix: Use // biome-ignore instead
  
    1   │ - //·rome-ignore·lint(suspicious/noDoubleEquals):·test
      1 │ + //·biome-ignore·lint(suspicious/noDoubleEquals):·test
    2 2 │   a == b;
  

```

```block
Checked 1 file in <TIME>. No fixes needed.
Found 2 errors.
```
