crates/biome_cli/tests/snapshots/main_commands_check/diagnostic_level_warn_fixes_warn_and_error_levels.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "complexity": {
        "noUselessUndefinedInitialization": "info"
      },
      "suspicious": {
        "noDoubleEquals": "error"
      }
    }
  }
}
```

## `test.ts`

```ts
let x: number | undefined = undefined;
if (x === 1) {
	console.log(x);
}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
